--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,41 @@
 body {
-  background-image: url(https://plus.unsplash.com/premium_photo-1683865776032-07bf70b0add1?q=80&w=1032&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-image: url(https://images.unsplash.com/photo-1737911330204-7764a5c79e9f?q=80&w=1033&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-size: cover;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+button {
+  border: 2px solid aqua;
+  border-radius: 20px;
+  color: aqua;
+  text-shadow: 1px 1px #000000;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+input {
+  width: 20%;
+  text-align: center;
+  border-radius: 12px;
+  margin: 3px;
+  font-size: 20px;
+}
+
+h1 {
+  color: aqua;
+  border-bottom: 6px solid white;
+  padding: 10px;
+  text-shadow: 2px 2px #000000;
 }
 
 code {
